--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta name="keywords" content="oneapi, swagger, api,">
 <meta name="description" content="OneAPI 通过 AST 分析 Spring 项目源码（Spring Boot/MVC）生成前端消费所需的 API，提供的 CLI 工具也可以与 Git/SVN Hooks 结合帮助你实现 API 生产自动化。相比 Swagger，OneAPI 对后端零接入成本，不需要启动应用。">
+<link rel="shortcut icon" href="/public/favicon.svg">
 <title>OneAPI - 一个 API 生产工具</title>
-<link rel="stylesheet" href="./dist/umi.css">
+<link rel="stylesheet" href="/dist/umi.css">
+<script>window.publicPath = "dist/";</script>
 </head>
 <body>
 <div id="root"></div>
-<script src="./dist/umi.js"></script>
+<script src="/dist/umi.js"></script>
+<script async="true" src="https://www.googletagmanager.com/gtag/js?id=G-HL5ZYTV94H"></script>
+<script>window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'G-HL5ZYTV94H');</script>
 
 </body></html>
