--- a/index.html
+++ b/index.html
@@ -6,11 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no"
     />
-    <link
-      rel="shortcut icon"
-      type="image/x-icon"
-      href="https://oneapi.app/public/favicon.svg"
-    />
+    <link rel="shortcut icon" type="image/x-icon" href="./favicon.svg" />
     <style>
       .__dumi-default-navbar-logo {
         padding: 0 0 0 32px !important;
